samples/_failures_safe/1761707607_166f9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2ef15fc.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f2ef15fc.c:177:17: error: expected expression at end of input
  177 |                 dist[v] = dist[minIndex] +
      |                 ^~~~
./samples/SAFE/__tmp_f2ef15fc.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f2ef15fc.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f2ef15fc.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f2ef15fc.c:177:17: error: expected declaration or statement at end of input
